[tool.poetry]
name = "networkx-poc"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bhochman@paloaltonetworks.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.950"
jupyter = "^1.0.0"
notebook = "^6.4.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
